# crypax

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: test.md  workflow.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/archive/: format.rs  format_v2.rs  layout.rs  manifest.rs  mod.rs  reader_v2.rs  writer_v2.rs
src/chunks/: erasure.rs  mod.rs  split.rs  verify.rs
src/commands/: decrypt.rs  encrypt.rs  forget.rs  list.rs  meta.rs  mod.rs  repair.rs  verify.rs
src/crypto/: aead.rs  keys.rs  mod.rs  recovery.rs
src/fs/: mod.rs  pack.rs  pack_stream.rs  restore.rs  restore_stream.rs  scan.rs
src/index/: db.rs  models.rs
tests/: archive_format.rs  chunk_split.rs  cli_smoke.rs  content_fingerprint.rs  cross_platform_paths.rs  crypto_roundtrip.rs  encrypt_decrypt_roundtrip.rs  encrypt_smoke.rs  erasure_params.rs  error_cases.rs  index_commands.rs  index_dedup.rs  index_metadata.rs  pack_stream.rs  privacy_leak_check.rs  repair_recovers_damage.rs  restore_stream.rs  source_pack.rs  source_scan.rs  v2_archive_roundtrip.rs  verify_detects_corruption.rs
tests/common/: mod.rs
