[package]
name = "crypax"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
walkdir = "2"
blake3 = "1.8"
argon2 = "0.5"
zeroize = { version = "1", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
data-encoding = "2"
reed-solomon-erasure = "6"
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
directories = "6"
rpassword = "7"

[dev-dependencies]
tempfile = "3.27.0"
